--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                     <iframe src="../product-landing-page/index.html" frameborder="0"></iframe>
                 </div>
                 <div class="project-tile" id="calisthenics-form">
-                    <a href="https://github.com/brandon-bec/calisthenics-form/blob/main/index.html" target="_blank">Calisthenics Form</a>
-                    <iframe src="https://github.com/brandon-bec/calisthenics-form/blob/main/index.html" frameborder="0"></iframe>
+                    <a href="https://brandon-bec.github.io/calisthenics-form.github.io/" target="_blank">Calisthenics Form</a>
+                    <iframe src="https://brandon-bec.github.io/calisthenics-form.github.io/" frameborder="0"></iframe>
                 </div>
                 <div class="project-tile" id="tribute-page">
                     <a href="../tribute-page/index.html" target="_blank">Tribute page</a>
