--- a/index.html
+++ b/index.html
@@ -83,20 +83,20 @@
             <section id="projects">
                 <h2>estos son algunos de mis proyectos</h2>
                 <div class="project-tile" id="css-documentatiion">
-                    <a href="../css-documentation/index.html" target="_blank">CSS documentation</a>
-                    <iframe src="../css-documentation/index.html" frameborder="0"></iframe>
+                    <a href="https://brandon-bec.github.io/css-documentation-page/" target="_blank">CSS documentation</a>
+                    <iframe src="https://brandon-bec.github.io/css-documentation-page/" frameborder="0"></iframe>
                 </div>
                 <div class="project-tile" id="product-landing-page">
-                    <a href="../product-landing-page/index.html" target="_blank">Product landing page</a>
-                    <iframe src="../product-landing-page/index.html" frameborder="0"></iframe>
+                    <a href="https://brandon-bec.github.io/product-landing-page/" target="_blank">Product landing page</a>
+                    <iframe src="https://brandon-bec.github.io/product-landing-page/" frameborder="0"></iframe>
                 </div>
                 <div class="project-tile" id="calisthenics-form">
-                    <a href="https://brandon-bec.github.io/calisthenics-form.github.io/" target="_blank">Calisthenics Form</a>
-                    <iframe src="https://brandon-bec.github.io/calisthenics-form.github.io/" frameborder="0"></iframe>
+                    <a href="https://brandon-bec.github.io/calisthenics-form/" target="_blank">Calisthenics Form</a>
+                    <iframe src="https://brandon-bec.github.io/calisthenics-form/" frameborder="0"></iframe>
                 </div>
                 <div class="project-tile" id="tribute-page">
-                    <a href="../tribute-page/index.html" target="_blank">Tribute page</a>
-                    <iframe src="../tribute-page/index.html" frameborder="0"></iframe>
+                    <a href="https://brandon-bec.github.io/tribute-page/" target="_blank">Tribute page</a>
+                    <iframe src="https://brandon-bec.github.io/tribute-page/" frameborder="0"></iframe>
                 </div>
             </section>
             <section id="contact">
