--- a/index.html
+++ b/index.html
@@ -103,17 +103,17 @@
                 <h2>trabajemos juntos...</h2>
                 <ul class="contact-list">
                     <li>
-                        <a id="profile-link" href="" target="_blank">
+                        <a id="profile-link" href="https://github.com/brandon-bec" target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
                     </li>
                     <li>
-                        <a id="profile-link" href="" target="_blank">
+                        <a id="profile-link" href="mailto:brandonbecerraalarcon@gmail.com" target="_blank">
                             <i class="fas fa-at"></i> Envíame un correo
                         </a>
                     </li>
                     <li>
-                        <a id="profile-link" href="" target="_blank">
+                        <a id="profile-link" href="https://api.whatsapp.com/send?phone=05492964658343" target="_blank">
                             <i class="fas fa-mobile-alt"></i> Llámame
                         </a>
                     </li>
